[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/menu_and_ui/logo_logicae/logo_end/end_game.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/user_interface.tres" type="Theme" id=2]
[ext_resource path="res://scr/user_interface/_menu.gd" type="Script" id=3]
[ext_resource path="res://scr/user_interface/menu_music.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/theme/fonts/kenney_mini_square.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 5 )

[node name="main_menu" type="CanvasLayer"]

[node name="_menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_music" parent="_menu" instance=ExtResource( 4 )]
autoplay = true

[node name="ColorRect" type="ColorRect" parent="_menu"]
margin_right = 426.0
margin_bottom = 240.0
color = Color( 0.113725, 0.129412, 0.172549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="_menu"]
margin_left = 96.0
margin_top = 24.0
margin_right = 336.0
margin_bottom = 86.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="_menu"]
margin_left = 4.0
margin_top = 216.0
margin_right = 104.0
margin_bottom = 236.0
theme = ExtResource( 2 )
text = " v1.0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="_menu"]
visible = false
margin_left = 360.0
margin_top = 224.0
margin_right = 416.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 1 )
text = "Esc para sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="_menu"]
margin_left = 132.0
margin_top = 104.0
margin_right = 288.0
margin_bottom = 196.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jogar" type="Button" parent="_menu/VBoxContainer"]
margin_right = 156.0
margin_bottom = 28.0
text = "Jogar"

[node name="selecionar_level" type="Button" parent="_menu/VBoxContainer"]
margin_top = 32.0
margin_right = 156.0
margin_bottom = 60.0
text = "SELETOR DE NÍVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="creditos" type="Button" parent="_menu/VBoxContainer"]
margin_top = 64.0
margin_right = 156.0
margin_bottom = 92.0
text = "cRÉDITOS"

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="pressed" from="_menu/VBoxContainer/jogar" to="_menu" method="_on_jogar_pressed"]
[connection signal="pressed" from="_menu/VBoxContainer/selecionar_level" to="_menu" method="_on_selecionar_level_pressed"]
[connection signal="pressed" from="_menu/VBoxContainer/creditos" to="_menu" method="_on_creditos_pressed"]
